--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 
 		<dependency>
@@ -70,6 +70,15 @@
 		<dependency>
     		<groupId>jakarta.persistence</groupId>
 	   		<artifactId>jakarta.persistence-api</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-tx</artifactId>
 		</dependency>
 	</dependencies>
 
